--- a/proj2_from_scratch/scheduler/app/views/schedules/show.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/show.html.erb
@@ -9,7 +9,7 @@
     <h2> <%= @schedule.name %> </h2>
     <div class="column">
       <h3> Courses </h3>
-      <p style="font-size: 18px;"> You currently have <%= @schedule.courses.count %> Courses </p>
+      <p style="font-size: 18px;"> You currently have <%= @schedule.courses.count %> Course(s) </p>
       <table class="table" style="width: 60%">
           <tr>
               <th>Name</th>
