--- a/proj2_from_scratch/scheduler/app/views/courses/department.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/department.html.erb
@@ -1,18 +1,21 @@
 <div class="container">
   <div class="row">
     <h2><%= @subject %></h2>
-    <div class="column">
       <table class="table">
-        <tbody>
+        <tr>
+            <th>Name</th>
+            <th>Course Title</th>
+            <th>Options</th>
+        </tr>
           <% @courses.each do |c| %>
             <tr>
-              <%= c.subject %> <%= c.nbr%>: <%= c.title%> 
-              <%= link_to "[More Info]", course_show_path(id: c.id) %>
-              <br>
+              <td><%= c.subject %> <%= c.nbr%> </td>
+              <td><%= c.title%> </td>
+              <td><div style="display: inline-block; height: 40px;">
+                <%= button_to "More Info", course_show_path(id: c.id), :class => "button small", :method => :get %>
+              </div></td>
             </tr>
           <% end %>
-        </tbody>
       </table>
-    </div>
   </div>
 </div>
