--- a/proj2_from_scratch/scheduler/app/views/courses/show.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/show.html.erb
@@ -1,42 +1,49 @@
-<div style="margin-left: 50px;">
-	<h1> <%= @course.subject %> <%= @course.nbr %>: <%= @course.title %> </h1>
-	<p> Location: <%= @course.location %> </p>
-	<p> Days: <%= @course.days %> </p>
-	<p> Time: <%= @course.start_time %> - <%= @course.end_time %> </p>
-	<p> Instructor: <%= @course.instructor %> </p>
-	<p> Description: <%= @course.description %> </p>
+<div class="container" style="margin-bottom: 50px;">
+	<div class="row">
+			<%= button_to "Back", course_department_path(subject: @course.subject), :class => "button medium", :method => :get %>
 
-	<h2>Comments</h2>
-	<table class="table">
-		<tbody>
-			<% @comments.each do |c| %>
-				<tr>
-					<% if c.course_id == @course.id %>
-						<% if c.user == 'admin' %>
-							<p><%= link_to c.email, admin_show_path(id: @admins.find_by(:email => c.email).id) %> said on <%= c.created_at %>: </p>
-		            		<p><%= c.text %></p>
-		            		<% if admin_signed_in? %>
-		            			<%= button_to "Delete Comment", comment_delete_path(id: c.id), :class => "button small", :method => 'delete' %>
-		            		<% end %>
-		            	<% elsif c.user == 'student' %>
-		            		<p><%= link_to c.email, student_show_path(id: @students.find_by(:email => c.email).id) %> said on <%= c.created_at %>: </p>
-		            		<p><%= c.text %></p>
-		            		<% if student_signed_in? %>
-		            			<%= button_to "Delete Comment", comment_delete_path(id: c.id), :class => "button small", :method => 'delete' %>
-		            		<% end %>
-		            	<% end %>
-		            <% end %>
-	        	</tr>
-	        <% end %>
-	    </tbody>
-	</table>
-	<%= form_for @comment, :url => comments_path(id: @course.id) do |c| %>
-  		<div class="form-group">
-        	<%= c.label :text, 'Enter your comment here:' %>
-        	<%= c.text_field :text, :autofocus => true, class: 'form-control' %>
-      	</div>
-	    <%= c.submit 'Submit', :class => 'button right' %>
-	<% end %>
+	<h1> <%= @course.subject %> <%= @course.nbr %>: <%= @course.title %> </h1> <br>
+	<div style="font-size: 18px;">
+		<p> <strong> Location: </strong> <%= @course.location %> </p>
+		<p> <strong>Days: </strong> <%= @course.days %> </p>
+		<p> <strong>Time: </strong> <%= @course.start_time %> - <%= @course.end_time %> </p>
+		<p> <strong>Instructor: </strong> <%= @course.instructor %> </p>
+		<p> <strong>Description: </strong> <%= @course.description %> </p>
+	</div>
 
-	<%= button_to "Back", course_department_path(subject: @course.subject), :class => "button medium", :method => :get %>
+	<br>
+
+		<h2>Comments</h2>
+		<div style="width: 60%;">
+		<table class="table">
+				<% @comments.each do |c| %>
+						<% if c.course_id == @course.id %>
+							<% if c.user == 'admin' %>
+								<tr><td><b><%= link_to c.email, admin_show_path(id: @admins.find_by(:email => c.email).id) %> </b>said on <%= c.created_at %>:
+			          <br><%= c.text %> </td>
+			            		<% if admin_signed_in? %>
+			            				<tr><td><%= button_to "Delete Comment", comment_delete_path(id: c.id), :class => "button small right", :method => 'delete' %></td></tr>
+			            		<% end %>
+			            	<% elsif c.user == 'student' %>
+			            		<td><%= link_to c.email, student_show_path(id: @students.find_by(:email => c.email).id) %> said on <%= c.created_at %>: <br><br>
+			            		<%= c.text %> </td>
+			            		<% if student_signed_in? %>
+			            			<td><%= button_to "Delete Comment", comment_delete_path(id: c.id), :class => "button small right", :method => 'delete' %></td></tr>
+			            		<% end %>
+			            	<% end %>
+			            <% end %>
+		        	</tr>
+		        <% end %>
+		</table>
+		</div>
+		<div class="edit-container" style="margin-left: 0px; padding: 25px;">
+		<%= form_for @comment, :url => comments_path(id: @course.id) do |c| %>
+	  		<div class="form-group" style="width: 100%">
+	        	<%= c.label :text, 'Enter your comment here:' %>
+	        	<%= c.text_field :text, :autofocus => true, class: 'form-control' %>
+	      	</div>
+		    <%= c.submit 'Submit', :class => 'button right' %>
+		<% end %>
+	</div>
+	</div>
 </div>
