--- a/proj2_from_scratch/scheduler/app/views/layouts/_navigation.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-styling" style="box-shadow: none; color: white;">
+<nav class="navbar navbar-styling">
 <div class="container-fluid">
 <!-- Brand and toggle get grouped for better mobile display -->
 <div class="navbar-header">
