--- a/proj2_from_scratch/scheduler/app/views/students/show.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/students/show.html.erb
@@ -5,22 +5,22 @@
   <h1>Student</h1>
   <p style="font-size: 16px;">Email: <%= @student.email if @student.email %></p>
 
-  <h3>Main Schedule: <%= @main_schedule.name %> </h3>
+  <h3>Main Schedule: <%= @schedule.name %> </h3>
   <div class="column">
     <h3> Courses </h3>
-    <p style="font-size: 18px;"> You currently have <%= @main_schedule.courses.count %> Course(s) </p>
+    <p style="font-size: 18px;"> You currently have <%= @schedule.courses.count %> Course(s) </p>
     <table class="table" style="width: 60%">
         <tr>
             <th>Name</th>
             <th>Course Title</th>
         </tr>
-        <% @main_schedule.courses.each do |c| %>
+        <% @schedule.courses.each do |c| %>
         <tr>
             <td> <%= c.subject %> <%= c.nbr %> </td>
             <td> <%= c.title %> </td>
         </tr>
         <% end %>
-      <div style="display: inline-block; margin-right: 5px;"><%= button_to "Edit Schedule", schedule_edit_path(id: @main_schedule.id), :class => "button medium", :method => :get %></div>
+      <div style="display: inline-block; margin-right: 5px;"><%= button_to "Edit Schedule", schedule_edit_path(id: @schedule.id), :class => "button medium", :method => :get %></div>
     </table>
 
   </div>
