--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -5,8 +5,9 @@
   <h1>Student</h1>
   <p style="font-size: 16px;">Email: <%= @student.email if @student.email %></p>
 
-  <h3>Main Schedule: <%= @schedule.name %> </h3>
-  <div class="column">
+  <h3>Main Schedule:
+    <% if @schedule %>
+      <%= @schedule.name %> </h3><div class="column">
     <h3> Courses </h3>
     <p style="font-size: 18px;"> You currently have <%= @schedule.courses.count %> Course(s) </p>
     <table class="table" style="width: 60%">
@@ -19,8 +20,10 @@
             <td> <%= c.subject %> <%= c.nbr %> </td>
             <td> <%= c.title %> </td>
         </tr>
-        <% end %>
       <div style="display: inline-block; margin-right: 5px;"><%= button_to "Edit Schedule", schedule_edit_path(id: @schedule.id), :class => "button medium", :method => :get %></div>
+      <% else %>
+          <p> You have no schedules yet! </p>
+      <% end %>
     </table>
 
   </div>
